tests/tooling/fixtures/native/recovery/negative/negative_prototype_signature_mismatch.objc3
// Expected diagnostic code(s): O3S206.
module NegativePrototypeSignatureMismatch;

fn pick(value: i32) -> i32;
fn pick(value: bool) -> i32 {
  return value;
}

fn main() -> i32 {
  return pick(1);
}
